--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-
-<input type="text" [(ngModel)]="name">
-<p>{{name}}</p>
-
-<p>im the app component</p>
-
-<app-servers></app-servers>
+<div class="container">
+    <div class="row">
+        <input type="text" [(ngModel)]="usertext">
+        <p>{{usertext}}</p>
+        
+        <p>im the app component</p>
+        
+        <app-servers></app-servers>
+    </div>
+</div>
