--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a href="#" class="navbar-brand"Recipe Book></a>
+        </div>
+
+        <div class="collapse navbar-collapse"></div>
+    </div>
+</nav>
